# IAFinal

./: README.md  azure-pipelines.yml  azure-pipelinesV1.yml  azure-pipelinesV2.yml  docker-compose.yml
.github/workflows/: deplyment_aks.yaml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
backend/app/: api.py  extractor_texto.py  image_utils.py  llm_client.py  main.py  model_loader.py  ollama_client.py  system_prompt.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py  exceptions.py  utils.py
backend/app/data_processing/: text_extractor.py  text_extractor_txt.py
backend/app/embeddings/: FAISS_db.py  Qdrant_db.py  chroma_db.py  milvus_db.py  service.py
backend/app/embeddings/raw_documents/: 202411-01-sail.txt  202411-03-onix-turbo-my25.txt  202411-08-tahoe.txt
backend/app/llm/: clients.py  historical.py  manager.py  prompts.py  rag.py
backend/data/: diez_archivos_organizados.json
backend/data/informes_transformados/: transformado_diez_archivos_organizados.json
backend/embeddings/: embedding_store.py  new_embedding_store.py
frontend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
k8s/: backend-deployment.yaml  deployment.yaml  frontend-deployment.yaml  ollama-deployment.yaml  service.yaml
