[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "blobfile>=3.0.0",
    "convertapi>=2.0.0",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-milvus>=0.1.10",
    "langchain-ollama>=0.3.2",
    "langchain-qdrant>=0.2.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.4",
    "ollama>=0.4.8",
    "pathlib>=1.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.9.1",
    "pymilvus>=2.5.9",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
    "weaviate-client>=4.11.3",
]


